# MFA_server

./: CMakeLists.txt  README.md
src/: README.md  main.cpp  mfa_core.cpp  mfa_core.h  server.cpp  server.h
src/handlers/: auth_handler.cpp  register_handler.cpp
